@@ -124,7 +124,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>${argLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>
+          <argLine>${argLine} -Xmx1024m</argLine>
         </configuration>
       </plugin>
       <plugin>
